# buze

./: README.md  buze.sln  buzz2zzub.ini  hotkeys.json  skeletonview.sln
src/armstrong/: Makefile.am  SConstruct  configure.ac
src/armstrong/armstrong.xcodeproj/: Mac.mode1  Mac.pbxuser  project.pbxproj
src/armstrong/include/: pmutil.h
src/armstrong/include/zzub/: plugin.h  pluginenum.h  pluginenum.zidl  signature.h  types.h  zzub.h  zzub.zidl
src/armstrong/share/doc/: libzzub.dox
src/armstrong/src/armserve/: armserve.vcxproj  main.cpp
src/armstrong/src/armserve/include/: binstream.h  client.h  message.h  session.h
src/armstrong/src/armstrong/: Makefile.am  armstrong.vcproj  armstrong.vcxproj  armstrong.vcxproj.filters  armstrong_driver.cpp  armstrong_info.cpp  armstrong_io.cpp  armstrong_pattern.cpp  armstrong_player.cpp  armstrong_plugin.cpp  armstrong_wave.cpp  bmxreader.cpp  bmxreader.h  compresstypes.h  decompress.cpp  decompress.h  libzzub.def  modimport.cpp  waveimport.cpp  waveimport.h  zipio.h
src/armstrong/src/mid2armz/: main.cpp  mid2armz.vcproj  mid2armz.vcxproj  mid2armz.vcxproj.filters  midiparser.cpp  midiparser.h
src/armstrong/src/minizip/: SConscript  minizip.vcxproj  minizip.vcxproj.filters
src/armstrong/src/mixing/: Makefile.am  allocpool.cpp  allocpool.h  columninfo.h  connections.cpp  connections.h  convertsample.cpp  convertsample.h  encoder.cpp  encoder.h  events.h  graph.cpp  graph.h  mixer.cpp  mixer.h  mixing.vcproj  mixing.vcxproj  mixing.vcxproj.filters  patternplayer.cpp  patternplayer.h  ringbuffer.h  song.cpp  song.h  synchronization.cpp  synchronization.h  thread_id.cpp  thread_id.h  threadqueue.h  timer.h
src/armstrong/src/modfile/: README  SConscript  drumkitimport.h  it.h  itsex.cpp  mod.h  modfile.vcproj  modfile.vcxproj  modfile.vcxproj.filters  module.cpp  module.h  module_drumkit.cpp  module_drumkit.h  module_it.cpp  module_it.h  module_mad.cpp  module_mad.h  module_mod.cpp  module_mod.h  module_s3m.cpp  module_s3m.h  module_sf2.h  module_sndfile.cpp  module_sndfile.h  module_xm.cpp  module_xm.h  s3m.h  xm.h
src/armstrong/src/player/: Makefile.am  archive.h  armserveclient.cpp  armserveclient.h  driver.cpp  driver.h  driver_native.cpp  driver_native.h  driver_silent.h  dummy.cpp  dummy.h  library.h  midi.cpp  midi.h  midinames.h  player.cpp  player.h  player.vcproj  player.vcxproj  player.vcxproj.filters  pluginmanager.cpp  pluginmanager.h
src/armstrong/src/player/audiodriver/: audioapi.cpp  audioapi.h  audiodriver.cpp  audiodriver.h  convertsample.cpp  convertsample.h  main.cpp
src/armstrong/src/player/mididriver/: midiapi.h
src/armstrong/src/plugins/: SConscript  plugincache.h  stringutil.h  zzub_plugin.def
src/armstrong/src/plugins/buzz2zzub/: MachineInterface.h  MemoryModule.c  MemoryModule.h  SConscript  buzz2zzub.cpp  buzz2zzub.h  buzz2zzub.ini  buzz2zzub.vcxproj  buzz2zzub.vcxproj.filters  buzztypes.h  bw.h  dsp.h  dsplib.h  editor.cpp  editor.h  inifile.h  mdk.h  mdkimpl.cpp  mdkimpl.h  plugincollection.cpp  plugincollection.h  plugins.h  resample.h  rswrap.h  unhack.cpp  unhack.h
src/armstrong/src/plugins/core/: Makefile.am  core.vcxproj  core.vcxproj.filters  group.cpp  group.h  harmony.cpp  harmony.h  input.cpp  input.h  master.cpp  master.h  note.cpp  note.h  offline.cpp  offline.h  output.cpp  output.h  pattern.cpp  pattern.h  peer.cpp  peer.h  plugins.cpp  plugins.h  recorder.cpp  recorder.h  sequence.cpp  sequence.h
src/armstrong/src/plugins/hw2zzub/: SConscript  hw2zzub.cpp  hw2zzub.h  hw2zzub.vcxproj  hw2zzub.vcxproj.filters
src/armstrong/src/plugins/lad2zzub/: SConscript  lad2zzub.cpp  lad2zzub.h  lad2zzub.vcxproj  lad2zzub.vcxproj.filters  ladspacollection.cpp  ladspacollection.h
src/armstrong/src/plugins/ld_fungus/: Makefile.am  envelope.cpp  envelope.h  fft.cpp  fft.h  filter.cpp  filter2p.h  filter4p.h  fungus.cpp  fungus.h  ld_fungus.vcxproj  ld_fungus.vcxproj.filters  lib.cpp  lib.h  main.cpp  pinknoise.cpp  pinknoise.h
src/armstrong/src/plugins/lunar/: Makefile.am  ReadMe.txt  SConscript  dspbb.h  lunar.cpp  lunar.def  lunar.h  lunar.vcxproj  lunar.vcxproj.filters  (+9 more)
src/armstrong/src/sid2armz/: convert.py  cpu.c  cpu.h  readme.txt  sid2armz.vcproj  sid2armz.vcxproj  sid2armz.vcxproj.filters  sidimport.cpp
src/armstrong/src/storage/: Makefile.am  armdb.dbgen  armdb_impl.cpp  armdb_impl.h  armdb_types.h  armdb_types_cpp.h  armz.cpp  armz.h  database.cpp  database.h  dbgenpp.h  document.cpp  document.h  pattern_transforms.cpp  storage.vcproj  storage.vcxproj  storage.vcxproj.filters
src/armstrong/tools/: zidl
(+704 files in other folders)
