AUTOMAKE_OPTIONS = foreign

noinst_LTLIBRARIES = liblunar.la

liblunar_la_SOURCES = lunar.cpp sha1.c

liblunar_la_CPPFLAGS = -DPOSIX -DLUNARTARGET_GCC -DSHLIBSUFFIX=\".so\" -I../../../include -I../.. -fpermissive


# lib_LTLIBRARIES = liblunarstd.la

# liblunarstd_la_SOURCES = lunarstd.cpp

# liblunarstd_la_CPPFLAGS = -DPOSIX -DLUNAR_STD_BUILD -I../../../include -I../.. -fpermissive


